// To regenerate api.pb.go run hack/update-generated-pod-resources.sh
syntax = "proto3";

package v1alpha1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;


// PodResourcesLister is a service provided by the kubelet that provides information about the
// node resources consumed by pods and containers on the node
service PodResourcesLister {
    rpc List(ListPodResourcesRequest) returns (ListPodResourcesResponse) {}
}

// ListPodResourcesRequest is the request made to the PodResourcesLister service
message ListPodResourcesRequest {}

// ListPodResourcesResponse is the response returned by List function
message ListPodResourcesResponse {
    repeated PodResources pod_resources = 1;
}

// PodResources contains information about the node resources assigned to a pod
message PodResources {
    string name = 1;
    string namespace = 2;
    repeated ContainerResources containers = 3;
}

// ContainerResources contains information about the resources assigned to a container
message ContainerResources {
    string name = 1;
    repeated ContainerDevices devices = 2;
}

// ContainerDevices contains information about the devices assigned to a container
message ContainerDevices {
    string resource_name = 1;
    repeated string device_ids = 2;
}

// PodTopologyAwareResources contains information about the resources assigned to a container,
// and organized as topology aware format.
message PodTopologyAwareResources {
    string pod_uid = 1;
    string pod_name = 2;
    string pod_namespace = 3;
    repeated ContainerTopologyAwareResources container_topology_aware_resources = 4;
}

message ContainerTopologyAwareResources {
    string container_name = 1;
    TopologyAwareResources allocated_resources = 2;
}

message TopologyAwareResources {
    map<string, ListOfTopologyAwareQuantity> topology_aware_resources = 1;
}

message ListOfTopologyAwareQuantity {
    repeated TopologyAwareQuantity topology_aware_quantity_list = 1;
}

message TopologyAwareQuantity {
    string resource_value = 1;
    uint64 nodes = 2;
}
